--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">     
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +22,14 @@
 </head>
 <body>
     <!-- <div id="container"> -->
-        <img id="pacman" src="pac man/PacMan1.png">
+        <img id="pacman" src="./images/PacMan1.png">
     <!-- </div> -->
 
     <script>
         // var container = document.getElementById("container");
         var pacman1 = document.getElementById("pacman");
-        const pacmanimages1=["PacMan1.png","PacMan2.png"]
-        const pacmanimages2=["PacMan3.png","PacMan4.png"]
+        const pacmanimages1=["./images/PacMan1.png","./images/PacMan2.png"]
+        const pacmanimages2=["./images/PacMan3.png","./images/PacMan4.png"]
         var current_index=0;
         var position = 0;
         var direction = 1;
